<resources>
    <string name="app_name">GridImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Filter</string>
    <string name="search_prompt">Enter Search Queary</string>
    <string name="Image_title_label">Image Name</string>
    <string name="searchBtnLabel">Search</string>
    <string name="searchHintTxt">Enter Search Query</string>
    <string name="imgTvLabel">Image title</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="lbl_image_size">Image Size</string>
    <string name="lbl_color_filter">Color Filter</string>
    <string name="lbl_image_type">Image Type</string>
    <string name="lbl_site_filter">Site Filter</string>
    <string name="lbl_save">Save</string>
    <string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra-large</item>
    </string-array>
    <string-array name="color_array">
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Green</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="image_type_array">
        <item>faces</item>
        <item>photo</item>
        <item>clip art</item>
        <item>line art</item>
    </string-array>
    <string name="title_activity_filter_display">FilterDisplay</string>
    <string name="title_activity_filter_search">FilterSearchActivity</string>
</resources>
